2017-11-20  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c [__ARM_ARCH_6M__] (chx_sched): Fix.

2017-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* example-fsm-55/hh.c (main): Just return.

2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/chx-stm32f103.c (configure_clock): Change prescaler on
	sleep.

	* mcu/clk_gpio_init-stm32.c (clock_init): Don't turn on CRC
	module.

	* mcu/clk_gpio_init-stm32.c (STM32_*): Move to...
	* mcu/stm32.h (STM32_*): ... this header file.

	* mcu/stm32f103.h, mcu/clk_gpio_init-stm32.c (RCC): Move to...
	* mcu/stm32.h (RCC): ... this header file.

	* example-fsm-55: Update for new sleep API.

	* rules.mk (CSRC): Add mcu/chx-$(CHIP).c.

	* chopstx-cortex-m.c (idle, chx_sleep_mode): Remove.
	(chx_sched, preempt): Call chx_idle.
	* mcu/chx-mkl27z.c, mcu/chx-stm32f0.c, mcu/chx-stm32f103.c: New.
	* mcu/stm32.h: New.

	* chopstx-gnu-linux.c (chx_sleep_mode): Move to...
	* mcu/chx-gnu-linux.c: Here.

	* mcu/stm32f103.h (DBGMCU): New.

	* mcu/cortex-m.h: New.
	* mcu/sys-stm32f0.c, mcu/sys-stm32f103.c: Use mcu/cortex-m.h.

	* chopstx.c (chopstx_conf_idle): Call chx_sleep_mode before
	changing chx_allow_sleep.

	* board/board-blue-pill.h, board/board-cq-starm.h,
	board/board-fst-01-00.h, board/board-fst-01.h,
	board/board-fst-01g.h, board/board-maple-mini.h,
	board/board-nitrokey-start.h, board/board-olimex-stm32-h103.h,
	board/board-st-dongle.h, board/board-st-nucleo-f103.h,
	board/board-stbee-mini.h, board/board-stbee.h,
	board/board-stm32-primer2.h: Add MCU_STM32F1.

2017-11-16  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (chopstx_poll): API change.
	* chopstx.c (chopstx_poll): Use const pointer.

	* chopstx-cortex-m.c (idle): Support WFE.
	[!MCU_STM32F0] (chx_sleep_mode): Clock feed by HSI.

2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_conf_idle): Call chx_sleep_mode.
	* chopstx-cortex-m.c (chx_sleep_mode): New.
	* chopstx-gnu-linux.c (chx_sleep_mode): New.

2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>
